--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Server for LabEval",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node server/app.js",
+    "dev": "nodemon server/app.js"
   },
   "dependencies": {
     "axios": "^0.21.4",
@@ -17,7 +17,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "multer": "^1.4.4-lts.1",
-    "pdf-parse": "^1.1.1",
     "uuid": "^8.3.2",
     "xlsx": "^0.18.5"
   },
