--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -18,6 +19,7 @@
     "mongoose": "^6.2.8",
     "multer": "^1.4.4-lts.1",
     "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.17.1",
     "uuid": "^8.3.2",
     "xlsx": "^0.18.5"
   },
